--- a/intex.html
+++ b/intex.html
@@ -5,5 +5,17 @@
 </head>
 <body>
 deneme 123 deneme 123
+	 
+	 rgar
+	 
+	wragtawsgt
+	ag 
+	awsrt
+	rwstgrs
+	tga
+	rsgt
+	a
+	srgt
+	
 </body>
 </html>
